添加代码文件

--- a/src/app/layout/default/header/header.component.html
+++ b/src/app/layout/default/header/header.component.html
@@ -13,17 +13,17 @@
             </div>
         </li>
         <!-- Github Page -->
-        <li>
-            <a class="item" href="//github.com/cipchk/ng-alain" target="_blank">
-                <i class="anticon anticon-github"></i>
-            </a>
-        </li>
-        <!-- Lock Page -->
-        <li class="hidden-xs">
-            <div class="item" [routerLink]="['/lock']">
-                <i class="anticon anticon-lock"></i>
-            </div>
-        </li>
+        <!--<li>-->
+            <!--<a class="item" href="//github.com/cipchk/ng-alain" target="_blank">-->
+                <!--<i class="anticon anticon-github"></i>-->
+            <!--</a>-->
+        <!--</li>-->
+        <!--&lt;!&ndash; Lock Page &ndash;&gt;-->
+        <!--<li class="hidden-xs">-->
+            <!--<div class="item" [routerLink]="['/lock']">-->
+                <!--<i class="anticon anticon-lock"></i>-->
+            <!--</div>-->
+        <!--</li>-->
         <!-- Search Button -->
         <li class="header-search__btn" (click)="searchToggleChange()">
             <div class="item">
@@ -58,9 +58,9 @@
                     <div nz-menu-item>
                         <header-storage></header-storage>
                     </div>
-                    <div nz-menu-item>
-                        <header-i18n></header-i18n>
-                    </div>
+                    <!--<div nz-menu-item>-->
+                    <!--<header-i18n></header-i18n>-->
+                <!--</div>-->
                 </div>
             </nz-dropdown>
         </li>
