--- a/src/app/layout/passport/passport.component.html
+++ b/src/app/layout/passport/passport.component.html
@@ -4,14 +4,14 @@
             <div class="head">
                 <a [routerLink]="['/']">
                     <img class="logo" src="./assets/img/logo-color.svg">
-                    <span class="title">ng-alain</span>
+                    <span class="title">SinoForce</span>
                 </a>
             </div>
-            <div class="desc">武林中最有影响力的《葵花宝典》；欲练神功，挥刀自宫</div>
+            <div class="desc">SinoForce 自动化业务装配系统</div>
         </div>
         <router-outlet></router-outlet>
         <global-footer [links]="links">
-            Copyright <i class="anticon anticon-copyright"></i> 2017 <a href="//github.com/cipchk" target="_blank">卡色</a>出品
+            Copyright <i class="anticon anticon-copyright"></i> 2017 <a href="#" target="_blank">SinoForce</a>出品
         </global-footer>
     </div>
 </div>
