--- a/src/app/routes/system/base-manager/base-manager.component.html
+++ b/src/app/routes/system/base-manager/base-manager.component.html
@@ -1,4 +1,4 @@
-<pro-header [title]=""></pro-header>
+<page-header [title]=""></page-header>
 
 <nz-card>
   <div class = "table-operations">
@@ -10,12 +10,13 @@
     <button nz-button  (click)="delete($event)">删除</button>
 
     <nz-popconfirm [nzTitle]="'确定要删除这个任务吗？'" (nzOnConfirm)="delete($event)" (nzOnCancel)="cancel()">
-      <button nz-button nz-popconfirm>删除1</button>
+      <button nz-popconfirm>删除1</button>
     </nz-popconfirm>
   </div>
   <nz-table #nzTable
-            [nzAjaxData]="_dataSet"
+            [nzData]="_dataSet"
             [nzShowSizeChanger]="true"
+            [nzFrontPagination]="false"
             [nzLoading]="_loading"
             [nzTotal]="_total"
             [(nzPageIndex)]="_current"
@@ -23,70 +24,53 @@
             [(nzPageSize)]="_pageSize"
             (nzPageSizeChange)="refreshData(true)"
             [nzBordered] = "true"
-            nzShowTotal
+            [nzShowTotal]="totalTemplate"
             nzSize = "small">
-    <thead nz-thead>
+    <thead (nzSortChange)="sort($event)" nzSingleSort>
     <tr>
-      <th nz-th [nzCheckbox]="true">
-        <label nz-checkbox [(ngModel)]="_allChecked" [nzIndeterminate]="_indeterminate" (ngModelChange)="_checkAll()">
-        </label>
-      </th>
-      <th nz-th>
-        <span>模块名称</span>
-        <nz-table-sort (nzValueChange)="sort('Name',$event)"></nz-table-sort>
-      </th>
-      <th nz-th>
-        <span>备注</span>
-        <nz-table-sort (nzValueChange)="sort('Id',$event)"></nz-table-sort>
-      </th>
-      <th nz-th>
-        <span>排序</span>
-        <nz-table-sort (nzValueChange)="sort('Order',$event)"></nz-table-sort>
-      </th>
-      <th nz-th>
-        <span>操作</span>
-      </th>
-
+        <th nzShowCheckbox  [(nzChecked)]="_allChecked" [nzIndeterminate]="_indeterminate" (nzCheckedChange)="_checkAll($event)"></th>
+        <th nzShowSort nzSortKey="Name">模块名称</th>
+        <th nzShowSort nzSortKey="Remark">备注</th>
+        <th nzShowSort nzSortKey="Order">排序</th>
+        <th >操作</th>
     </tr>
     </thead>
-    <tbody nz-tbody>
-    <tr nz-tbody-tr *ngFor="let data of nzTable.data" (click)="selectRow(data,editCache[data.id]?.dataItem)" [ngStyle]="{'background-color':data.selected?'rgb(236, 246, 253)':''}">
-      <td nz-td [nzCheckbox]="true">
-        <label nz-checkbox [(ngModel)]="data.checked" (ngModelChange)="refChecked()">
-        </label>
+    <tbody >
+    <tr  *ngFor="let data of nzTable.data" (click)="selectRow(data,editCache[data.id]?.dataItem)" [ngStyle]="{'background-color':data.selected?'rgb(236, 246, 253)':''}">
+      <td nzShowCheckbox  [(nzChecked)]="data.checked" (nzCheckedChange)="refChecked($event)">
       </td>
-      <td nz-td>
+      <td >
         <span *ngIf="editRow !== data.Id"><a>{{data.Name}}</a></span>
         <span *ngIf="editRow===data.Id">
-              <nz-input [(ngModel)]="tempEditObject[data.Id].Name"></nz-input>
+              <input type="text" nz-input [(ngModel)]="tempEditObject[data.Id].Name">
         </span>
       </td>
-      <td nz-td>
+      <td >
         <span *ngIf="editRow !== data.Id">{{data.Remark}}</span>
         <span *ngIf="editRow===data.Id">
-              <nz-input [(ngModel)]="tempEditObject[data.Id].Remark"></nz-input>
+              <input type="text" nz-input [(ngModel)]="tempEditObject[data.Id].Remark">
         </span>
       </td>
-      <td nz-td>
+      <td >
         <span *ngIf="editRow !== data.Id">{{data.Order}}</span>
         <span *ngIf="editRow===data.Id">
-              <nz-input [(ngModel)]="tempEditObject[data.Id].Order"></nz-input>
+              <input type="text" nz-input [(ngModel)]="tempEditObject[data.Id].Order">
         </span>
       </td>
-      <td nz-td>
+      <td >
             <span *ngIf="editRow!==data.Id">
               <a (click)="edit(data)">编辑 </a>
             </span>
             <span *ngIf="editRow===data.Id">
               <a (click)="save(data)">保存</a>
-              <span nz-table-divider></span>
+              <span ></span>
                 <nz-popconfirm [nzTitle]="'确定要取消该操作吗?'" (nzOnConfirm)="cancel(data)">
                   <a nz-popconfirm>取消</a>
                 </nz-popconfirm>
             </span>
 
             <span *ngIf="editRow!==data.Id">
-              <span nz-table-divider></span>
+              <span ></span>
                <nz-popconfirm [nzTitle]="'确定要删除该条数据吗?'" (nzOnConfirm)="delete1(data)">
                   <a nz-popconfirm>删除</a>
                 </nz-popconfirm>
@@ -95,5 +79,8 @@
     </tr>
     </tbody>
   </nz-table>
+    <ng-template #totalTemplate let-total let-range="range">
+        {{range[0]}}-{{range[1]}} /共 {{total}} 条
+    </ng-template>
 </nz-card>
 
