--- a/src/app/routes/system/base-manager/modal-base.component.html
+++ b/src/app/routes/system/base-manager/modal-base.component.html
@@ -1,19 +1,15 @@
-<div xmlns="http://www.w3.org/1999/html">
+
   <form nz-form [formGroup]="validateForm" (ngSubmit)="_submitForm()">
-    <div nz-form-item nz-row>
-      <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
-        <label for='Name' >名称</label>
-      </div>
-      <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
-        <nz-input [nzSize]="'large'" formControlName="Name" [nzId]="'Name'"></nz-input>
-        <div nz-form-explain *ngIf="getFormControl('Name').dirty&&getFormControl('Name').hasError('Name')">模块名称不能为空!</div>
-      </div>
-    </div>
-    <div nz-form-item nz-row>
-      <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
-        <label for="ParentId" >父模块</label>
-      </div>
-        <div nz-form-control nz-col [nzSm]="14" [nzXs]="24">
+    <nz-form-item>
+        <nz-form-label nz-col [nzSm]="6" [nzXs]="24" nzRequired mzFor="Name">名称</nz-form-label>
+      <nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
+          <input nz-input  formControlName="Name" id="Name">
+          <nz-form-explain *ngIf="getFormControl('Name').dirty&&getFormControl('Name').hasError('Name')">模块名称不能为空!</nz-form-explain>
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+        <nz-form-label nz-col [nzSm]="6" [nzXs]="24" nzRequired mzFor="ParentId">所属模块</nz-form-label>
+        <nz-form-control nz-col [nzSm]="14" [nzXs]="24">
           <nz-cascader
             formControlName = "ParentId"
             nzChangeOnSelect
@@ -22,54 +18,63 @@
             (nzChange)="onChanges($event)"
             (nzSelectionChange) ="onSelectionChange($event)">
           </nz-cascader>
-        </div>
-    </div>
-    <div nz-form-item nz-row>
-      <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
-        <label for="Group" >
-          <span>分组</span>
-        </label>
-      </div>
-      <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-label nz-col [nzSm]="6" [nzXs]="24" nzRequired mzFor="Group">是否分组</nz-form-label>
+      <nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
         <label nz-checkbox formControlName="Group">
         </label>
-      </div>
-    </div>
-    <div nz-form-item nz-row>
-      <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
-        <label for="Link">
-            <span>地址</span>
-        </label>
-      </div>
-      <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
-        <nz-input [nzSize]="'large'" formControlName="Link" [nzId]="'Link'"></nz-input>
-      </div>
-    </div>
-    <div nz-form-item nz-row>
-      <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
-        <label for="Icon" >图标</label>
-      </div>
-      <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
-        <nz-input [nzSize]="'large'" formControlName="Icon" [nzId]="'Icon'"></nz-input>
-      </div>
-    </div>
-    <div nz-form-item nz-row>
-      <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
-        <label for="Order" >排序</label>
-      </div>
-      <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+        <nz-form-label nz-col [nzSm]="6" [nzXs]="24" nzRequired mzFor="Link">地址</nz-form-label>
+      <nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
+        <input nz-input  formControlName="Link" id="Link">
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+        <nz-form-label nz-col [nzSm]="6" [nzXs]="24" nzRequired mzFor="Icon">图标</nz-form-label>
+      <nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
+        <input nz-input  formControlName="Icon" id="Icon" [(ngModel)]= "iconFlag" (click)="showModal()">
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item >
+        <nz-form-label nz-col [nzSm]="6" [nzXs]="24" nzRequired mzFor="Order">排序</nz-form-label>
+      <nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
         <nz-input-number [nzSize]="'large'" formControlName="Order" ></nz-input-number>
-      </div>
-    </div>
-    <div nz-form-item nz-row>
-      <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
-        <label for="Remark" >备注</label>
-      </div>
-      <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
-        <nz-input [nzSize]="'large'" formControlName="Remark" [nzId]="'Icon'"></nz-input>
-      </div>
-    </div>
-    <div class="customize-footer">
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+        <nz-form-label nz-col [nzSm]="6" [nzXs]="24" nzRequired mzFor="Remark">备注</nz-form-label>
+      <nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
+        <input nz-input  formControlName="Remark" id="Icon">
+      </nz-form-control>
+    </nz-form-item>
+
+      <nz-form-item >
+          <nz-modal [(nzVisible)]="isVisible" [nzContent]="modalContent" nzTitle="选择图标" (nzOnCancel)="handleCancel1()" (nzOnOk)="handleOk()">
+              <ng-template #modalContent>
+                  <div style="height:710px; width: 494px; overflow:auto; ">
+                      <div class="mb-sm" *ngFor="let group of data" >
+                          <h4 class="border-bottom-1 pb-sm mb-sm">{{group.title}}</h4>
+                          <nz-alert *ngIf="group.tip" [nzType]="'warning'" [nzShowIcon]="'true'" class="mb-sm">
+                              <span alert-body [innerHTML]="group.tip"></span>
+                          </nz-alert>
+                          <div class="icons" nz-row [nzGutter]="8">
+                              <div class="item" nz-col [nzSpan]="8"
+                                   *ngFor="let item of group.list" (click)="copy(group, item)">
+                                  <em class="{{group.prefix}}{{item.k}}"></em> {{item.k}}
+                                  <em *ngIf="item.a" class="text-grey">(alias)</em>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </ng-template>
+          </nz-modal>
+      </nz-form-item>
+
+      <div class="customize-footer">
       <button nz-button [nzType]="'primary'" [nzSize]="'large'" (click)="emitDataOutside($event)">
         保存
       </button>
@@ -79,7 +84,7 @@
     </div>
   </form>
 
-  </div>
+
 <style>
   :host ::ng-deep .customize-footer {
     border-top: 1px solid #e9e9e9;
