--- a/src/app/shared/components/cn-code-edit/cn-code-edit.component.html
+++ b/src/app/shared/components/cn-code-edit/cn-code-edit.component.html
@@ -1,27 +1,5 @@
 <div nz-row>
     <div nz-col [nzSpan]='24'>
-            <textarea #CodeMirror name="code">
-                SELECT [ID]
-                ,[PERSON_ID]
-                ,[PLAT_CUSTOMER_ID]
-                ,[ORG_ID]
-                ,[USER_TYPE]
-                ,[NAME]
-                ,[CODE]
-                ,[PASSWORD]
-                ,[REAL_NAME]
-                ,[NICK_NAME]
-                ,[GENDER]
-                ,[BIRTHDAY]
-                ,[ID_CARD_NUMBER]
-                ,[MOBILE_NUMBER]
-                ,[MAIL_ADDRESS]
-                ,[LOGIN_LIMIT_KIND]
-                ,[STATUS]
-                ,[REMARK]
-                ,[CREATE_TIME]
-            FROM [dbo].[APP_USER]
-           WHERE $CODE$='1';
-            </textarea>
+            <textarea #CodeMirror name="code"></textarea>
     </div>
 </div>
