完成 SQL 脚本编辑器 SQL编辑功能

--- a/src/app/routes/settings/sql-setting/sql-setting.component.html
+++ b/src/app/routes/settings/sql-setting/sql-setting.component.html
@@ -32,6 +32,7 @@
     </nz-card>
   </div>
 </div>
+<!--
 <div nz-row [nzGutter]="8">
   <div nz-col [nzSpan]="24">
     <nz-card nzTitle="SQL 语句设置">
@@ -42,4 +43,5 @@
     </nz-card>
   </div>
 </div>
-<cn-sql-editor></cn-sql-editor>
+-->
+<cn-sql-editor [config]="_sqlEditorConfig"></cn-sql-editor>
