--- a/src/app/shared/business/sql-editor/sql-editor.component.html
+++ b/src/app/shared/business/sql-editor/sql-editor.component.html
@@ -19,8 +19,13 @@
     </nz-card>
     <nz-row [nzGutter]="8">
         <nz-col nzSpan="24">
-            <nz-table #sqlTable [nzData]="tableData" [nzPageSize]="10" [nzSize]="'small'" [nzLoading]="loading" [nzTotal]="total" [(nzPageIndex)]="pageIndex"
-                [(nzPageSize)]="pageSize">
+            <nz-table #sqlTable 
+            [nzData]="tableData" 
+            [nzSize]="'small'" 
+            [nzLoading]="loading" 
+            [nzTotal]="total" 
+            [(nzPageIndex)]="pageIndex"
+            [(nzPageSize)]="pageSize">
                 <thead>
                     <tr>
                         <th nzShowExpand></th>
@@ -31,6 +36,7 @@
                         <th>发布状态</th>
                         <th>作用域</th>
                         <th>是否启用</th>
+                        <th> </th>
                     </tr>
                 </thead>
                 <tbody>
@@ -44,6 +50,14 @@
                             <td>{{data.IssueFlag}}</td>
                             <td>{{data.ShareScope}}</td>
                             <td>{{data.Enabled}}</td>
+                            <td>
+                                    <nz-popconfirm [nzTitle]="'确认删除当前记录?'" (nzOnConfirm)="delete(data.Id)" (nzOnCancel)="cancel()" [nzPlacement]="'top'">
+                                            <button nz-popconfirm nz-button [nzType]="'danger'" [nzSize]="'small'">
+                                                    <i class="anticon anticon-delete"></i> 删除</button>
+                                    </nz-popconfirm>
+                               
+                            
+                            </td>
                         </tr>
                         <tr [nzExpand]="data.expand">
                             <td></td>
