--- a/src/app/routes/settings/operation-setting/operation-setting.component.html
+++ b/src/app/routes/settings/operation-setting/operation-setting.component.html
@@ -34,9 +34,10 @@
 <div nz-row [nzGutter]="8">
   <div nz-col [nzSpan]="6">
     <nz-card>
-      <nz-tree #tree (nzContextMenu)="mouseAction('contextmenu', $event)" [nzTreeData]="nodes" (nzClick)="onActivate($event)" [nzDefaultExpandAll]="treeconfig.nzAutoExpandParent"
+      <!-- <nz-tree #tree (nzContextMenu)="mouseAction('contextmenu', $event)" [nzTreeData]="nodes" (nzClick)="onActivate($event)" [nzDefaultExpandAll]="treeconfig.nzAutoExpandParent"
         [nzCheckable]="treeconfig.nzCheckable" [nzShowLine]="treeconfig.nzShowLine">
-      </nz-tree>
+      </nz-tree> -->
+      <cn-bsn-tree [config]="treeConfig"></cn-bsn-tree>
     </nz-card>
   </div>
   <div nz-col [nzSpan]="18">
@@ -68,7 +69,7 @@
   </nz-tree>
 </nz-card> -->
 
-<nz-card nz-col [nzSpan]="12">
+<!-- <nz-card nz-col [nzSpan]="12">
   <nz-tree 
     [nzTreeData]="_demoAsyncTreeData" 
     [nzAsyncData]="config.asyncData" 
@@ -79,4 +80,4 @@
     (nzExpandChange)="onMouseAction('expandNode', $event)"
   >
   </nz-tree>
-</nz-card>
+</nz-card> -->
