--- a/src/app/layout/default/header/header.component.html
+++ b/src/app/layout/default/header/header.component.html
@@ -25,13 +25,14 @@
             <!--</div>-->
         <!--</li>-->
         <!-- Search Button -->
-        <li class="header-search__btn" (click)="searchToggleChange()">
-            <div class="item">
-                <i class="anticon anticon-search"></i>
-            </div>
-        </li>
+        <!--<li class="header-search__btn" (click)="searchToggleChange()">-->
+            <!--<div class="item">-->
+                <!--<i class="anticon anticon-search"></i>-->
+            <!--</div>-->
+        <!--</li>-->
     </ul>
-    <header-search class="header-search" [toggleChange]="searchToggleStatus"></header-search>
+    <!--<header-search class="header-search" [toggleChange]="searchToggleStatus"></header-search>-->
+    <h2 class="title">{{projectName}}</h2>
     <ul class="top-nav">
         <!-- Notify -->
         <li>
