--- a/src/app/layout/default/sidebar/sidebar.component.html
+++ b/src/app/layout/default/sidebar/sidebar.component.html
@@ -1,16 +1,16 @@
 <div class="aside-inner">
     <nz-dropdown nzTrigger="click" class="user-block">
         <div nz-dropdown class="user-block-dropdown">
-            <nz-avatar class="avatar" [nzSrc]="settings.user.avatar"></nz-avatar>
+            <nz-avatar class="avatar" [nzSrc]="settings.user['Remark']"></nz-avatar>
             <div class="info">
-                <strong>{{settings.user.name}}</strong>
-                <p class="text-truncate mb0">{{settings.user.email}}</p>
+                <strong  class="text-truncate mb0">{{settings.user['RealName']}}</strong>
+                <p class="text-truncate mb0">{{settings.user['MailAddress']}}</p>
             </div>
         </div>
         <ul nz-menu>
             <li nz-menu-item (click)="msgSrv.success('profile')">{{ 'profile' | translate }}</li>
             <li nz-menu-item (click)="msgSrv.success('settings')">{{ 'settings' | translate }}</li>
-            <li nz-menu-item (click)="msgSrv.success('logout')">{{ 'logout' | translate }}</li>
+            <li nz-menu-item (click)="logout()">{{ 'logout' | translate }}</li>
         </ul>
     </nz-dropdown>
     <sidebar-nav class="d-block py-lg"></sidebar-nav>
