--- a/src/app/routes/passport/login/login.component.html
+++ b/src/app/routes/passport/login/login.component.html
@@ -1,19 +1,19 @@
 <form nz-form [formGroup]="form" (ngSubmit)="submit()" role="form">
     <nz-tabset [nzAnimated]="false" class="tabs" (nzSelectChange)="switch($event)">
-        <nz-tab nzTitle="账户密码登录">
+        <nz-tab nzTitle="配置平台登录">
             <nz-alert *ngIf="error" [nzType]="'error'" [nzMessage]="error" [nzShowIcon]="true" class="mb-lg"></nz-alert>
             <nz-form-item>
                 <nz-form-control>
                     <nz-input-group nzSize="large" nzPrefixIcon="anticon anticon-user">
-                        <input nz-input formControlName="userName" placeholder="admin">
+                        <input nz-input formControlName="userName" placeholder="登录账号">
                     </nz-input-group>
-                    <nz-form-explain *ngIf="userName.dirty && userName.errors">请输入账户名且至少五个字符！</nz-form-explain>
+                    <nz-form-explain *ngIf="userName.dirty && userName.errors">请输入账户名且至少一个字符！</nz-form-explain>
                 </nz-form-control>
             </nz-form-item>
             <nz-form-item>
                 <nz-form-control>
                     <nz-input-group nzSize="large" nzPrefixIcon="anticon anticon-lock">
-                        <input nz-input type="password" formControlName="password" placeholder="888888">
+                        <input nz-input type="password" formControlName="password" placeholder="登录密码">
                     </nz-input-group>
                     <nz-form-explain *ngIf="password.dirty && password.errors">
                         请输入密码！
@@ -21,30 +21,30 @@
                 </nz-form-control>
             </nz-form-item>
         </nz-tab>
-        <nz-tab nzTitle="手机号登录">
+        <nz-tab nzTitle="解析平台登录">
             <nz-form-item>
                 <nz-form-control>
                     <nz-input-group nzSize="large" nzPrefixIcon="anticon anticon-user">
-                        <input nz-input formControlName="mobile" placeholder="手机号">
+                        <input nz-input formControlName="uName" placeholder="登录账号">
                     </nz-input-group>
-                    <nz-form-explain *ngIf="mobile.dirty && mobile.errors">请输入手机号且至少五个字符！</nz-form-explain>
+                    <nz-form-explain *ngIf="uName.dirty && uName.errors">请输入账户名且至少一个字符！</nz-form-explain>
                 </nz-form-control>
             </nz-form-item>
             <nz-form-item>
                 <nz-form-control>
-                    <nz-row [nzGutter]="8">
-                        <nz-col [nzSpan]="16">
-                            <nz-input-group nzSize="large" nzPrefixIcon="anticon anticon-mail">
-                                <input nz-input formControlName="captcha" placeholder="验证码">
-                            </nz-input-group>
-                            <nz-form-explain *ngIf="mobile.dirty && mobile.errors">
-                                请输入验证码！
-                            </nz-form-explain>
-                        </nz-col>
-                        <nz-col [nzSpan]="8">
-                            <button nz-button nzSize="large" (click)="getCaptcha()" [disabled]="count" class="ant-btn__block">{{ count ? count + 's' : '获取验证码' }}</button>
-                        </nz-col>
-                    </nz-row>
+                    <!-- <nz-row [nzGutter]="8">
+                        <nz-col [nzSpan]="16"> -->
+                    <nz-input-group nzSize="large" nzPrefixIcon="anticon anticon-lock">
+                        <input nz-input type="password" formControlName="uPassword" placeholder="登录密码">
+                    </nz-input-group>
+                    <nz-form-explain *ngIf="uPassword.dirty && uPassword.errors">
+                        请输入密码！
+                    </nz-form-explain>
+                    <!-- </nz-col>
+                    <nz-col [nzSpan]="8">
+                        <button nz-button nzSize="large" (click)="getCaptcha()" [disabled]="count" class="ant-btn__block">{{ count ? count + 's' : '获取验证码' }}</button>
+                    </nz-col>
+                </nz-row> -->
                 </nz-form-control>
             </nz-form-item>
         </nz-tab>
