--- a/src/app/routes/system/module-manager/module-manager.component.html
+++ b/src/app/routes/system/module-manager/module-manager.component.html
@@ -23,15 +23,15 @@
                 nzSize = "small" >
         <thead>
         <tr>
-          <th><span>名称</span></th>
-          <th><span>地址</span></th>
-          <th><span>有效</span></th>
-          <th><span>排序</span></th>
+          <th>名称</th>
+          <th>地址</th>
+          <th>有效</th>
+          <th>排序</th>
           <!--<th><span>项目ID</span></th>-->
           <!--<th><span>ApplyId</span></th>-->
           <!--<th><span>客户ID</span></th>-->
-          <th><span>备注</span></th >
-          <th><span>创建时间</span></th>
+          <th>备注</th >
+          <th>创建时间</th>
         </tr>
         </thead>
         <tbody>
