--- a/src/app/routes/system/user-manager/user-manager.component.html
+++ b/src/app/routes/system/user-manager/user-manager.component.html
@@ -23,14 +23,12 @@
             nzSize = "small">
     <thead (nzSortChange)="sort($event)" nzSingleSort>
     <tr>
-        <th nzShowSort nzSortKey="Name"><span>用户名</span></th>
-        <!--<th nzShowSort nzSortKey="Id"><span>主键</span></th>-->
-        <th nzShowSort nzSortKey="Code"><span>编码</span></th>
-        <th nzShowSort nzSortKey="Gender"><span>性别</span></th>
-        <th nzShowSort nzSortKey="IdCardNumber"><span>身份标识</span></th>
-        <th nzShowSort nzSortKey="MailAddress"><span>Email</span></th>
-        <th nzShowSort nzSortKey="NickName"><span>昵称</span></th>
-        <th nzShowSort nzSortKey="CreateTime"><span>创建时间</span></th>
+        <th nzShowSort nzSortKey="Name">用户名</th>
+        <th nzShowSort nzSortKey="Code">编码</th>
+        <th nzShowSort nzSortKey="IdCardNumber">身份标识</th>
+        <th nzShowSort nzSortKey="MailAddress">Email</th>
+        <th nzShowSort nzSortKey="NickName">昵称</th>
+        <th nzShowSort nzSortKey="CreateTime">创建时间</th>
     </tr>
     </thead>
     <tbody nz-tbody>
@@ -38,9 +36,7 @@
       <td nz-td>
         <a>{{data.Name}}</a>
       </td>
-      <!--<td nz-td>{{data.Id}}</td>-->
       <td nz-td>{{data.Code}}</td>
-      <td nz-td>{{Gender[data.Gender]}}</td>
       <td nz-td>{{data.IdCardNumber}}</td>
       <td nz-td>{{data.MailAddress}}</td>
       <td nz-td>{{data.NickName}}</td>
@@ -54,68 +50,68 @@
 </nz-card>
 
 
-<nz-collapse>
-  <nz-collapse-panel nzHeader='Api交互示例'>
+<!--<nz-collapse>-->
+  <!--<nz-collapse-panel nzHeader='Api交互示例'>-->
 
-    <div class="content__title">
-      <div>
-      <input type="button" value="点我获取用户信息"  (click)="getUser()">
-      <h4>{{content}}</h4>
-      </div>
-      <div>
-      <input type="button" value="点我获取模块信息"  (click)="getModule()">
-      <h4>{{contentModule}}</h4>
-      </div>
-      <div>
-      <input type="button" value="点我获取配置信息"  (click)="getAppConfigPack()">
-      <h4>{{contentConfigPack}}</h4>
-      </div>
-    </div>
-    <div class="content__title">
-      <div>
-        <input type="button" value="点我添加用户信息"  (click)="addUser()">
-        <h4>{{addcontent}}</h4>
-      </div>
-      <div>
-        <input type="button" value="点我添加模块信息"  (click)="addModule()">
-        <h4>{{addcontentModule}}</h4>
-      </div>
-      <div>
-        <input type="button" value="点我添加配置信息"  (click)="addAppConfigPack()">
-        <h4>{{addcontentConfigPack}}</h4>
-      </div>
-    </div>
+    <!--<div class="content__title">-->
+      <!--<div>-->
+      <!--<input type="button" value="点我获取用户信息"  (click)="getUser()">-->
+      <!--<h4>{{content}}</h4>-->
+      <!--</div>-->
+      <!--<div>-->
+      <!--<input type="button" value="点我获取模块信息"  (click)="getModule()">-->
+      <!--<h4>{{contentModule}}</h4>-->
+      <!--</div>-->
+      <!--<div>-->
+      <!--<input type="button" value="点我获取配置信息"  (click)="getAppConfigPack()">-->
+      <!--<h4>{{contentConfigPack}}</h4>-->
+      <!--</div>-->
+    <!--</div>-->
+    <!--<div class="content__title">-->
+      <!--<div>-->
+        <!--<input type="button" value="点我添加用户信息"  (click)="addUser()">-->
+        <!--<h4>{{addcontent}}</h4>-->
+      <!--</div>-->
+      <!--<div>-->
+        <!--<input type="button" value="点我添加模块信息"  (click)="addModule()">-->
+        <!--<h4>{{addcontentModule}}</h4>-->
+      <!--</div>-->
+      <!--<div>-->
+        <!--<input type="button" value="点我添加配置信息"  (click)="addAppConfigPack()">-->
+        <!--<h4>{{addcontentConfigPack}}</h4>-->
+      <!--</div>-->
+    <!--</div>-->
 
-    <div class="content__title">
-      <div>
-        <input type="button" value="点我修改用户信息"  (click)="putUser()">
-        <h4>{{putcontent}}</h4>
-      </div>
-      <div>
-        <input type="text" #moduleId>
-        <input type="button" value="点我修改模块信息"  (click)="putModule()">
-        <h4>{{putcontentModule}}</h4>
-      </div>
-      <div>
-        <input type="button" value="点我修改配置信息"  (click)="putAppConfigPack()">
-        <h4>{{putcontentConfigPack}}</h4>
-      </div>
-    </div>
+    <!--<div class="content__title">-->
+      <!--<div>-->
+        <!--<input type="button" value="点我修改用户信息"  (click)="putUser()">-->
+        <!--<h4>{{putcontent}}</h4>-->
+      <!--</div>-->
+      <!--<div>-->
+        <!--<input type="text" #moduleId>-->
+        <!--<input type="button" value="点我修改模块信息"  (click)="putModule()">-->
+        <!--<h4>{{putcontentModule}}</h4>-->
+      <!--</div>-->
+      <!--<div>-->
+        <!--<input type="button" value="点我修改配置信息"  (click)="putAppConfigPack()">-->
+        <!--<h4>{{putcontentConfigPack}}</h4>-->
+      <!--</div>-->
+    <!--</div>-->
 
-    <div class="content__title">
-      <div>
-        <input type="button" value="点我删除用户信息"  (click)="delUser()">
-        <h4>{{delcontent}}</h4>
-      </div>
-      <div>
-        <input type="button" value="点我删除模块信息"  (click)="delModule()">
-        <h4>{{delcontentModule}}</h4>
-      </div>
-      <div>
-        <input type="button" value="点我删除配置信息"  (click)="delAppConfigPack()">
-        <h4>{{delcontentConfigPack}}</h4>
-      </div>
-    </div>
+    <!--<div class="content__title">-->
+      <!--<div>-->
+        <!--<input type="button" value="点我删除用户信息"  (click)="delUser()">-->
+        <!--<h4>{{delcontent}}</h4>-->
+      <!--</div>-->
+      <!--<div>-->
+        <!--<input type="button" value="点我删除模块信息"  (click)="delModule()">-->
+        <!--<h4>{{delcontentModule}}</h4>-->
+      <!--</div>-->
+      <!--<div>-->
+        <!--<input type="button" value="点我删除配置信息"  (click)="delAppConfigPack()">-->
+        <!--<h4>{{delcontentConfigPack}}</h4>-->
+      <!--</div>-->
+    <!--</div>-->
 
-  </nz-collapse-panel>
-</nz-collapse>
+  <!--</nz-collapse-panel>-->
+<!--</nz-collapse>-->
