--- a/src/app/routes/system/priv-manager/priv-manager.component.html
+++ b/src/app/routes/system/priv-manager/priv-manager.component.html
@@ -22,7 +22,7 @@
               nzSize = "small">
         <thead (nzSortChange)="sort($event)" nzSingleSort>
         <tr>
-            <th nzShowSort nzSortKey="Name">用户名</th>
+            <th nzShowSort nzSortKey="Name">角色名称</th>
             <th nzShowSort nzSortKey="Code">编码</th>
             <th nzShowSort nzSortKey="Gender">性别</th>
             <th nzShowSort nzSortKey="IdCardNumber">身份标识</th>
