--- a/src/app/routes/system/module-manager/module-operation.component.html
+++ b/src/app/routes/system/module-manager/module-operation.component.html
@@ -30,7 +30,7 @@
     <nz-form-item>
         <nz-form-label nz-col [nzSm]="6" [nzXs]="24" nzRequired mzFor="Hide">是否禁用</nz-form-label>
         <nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
-            <label nz-checkbox formControlName="Hide">默认为禁用状态
+            <label nz-checkbox formControlName="Hide">默认为启用状态
             </label>
         </nz-form-control>
     </nz-form-item>
