实现 分布保存布局

--- a/src/app/routes/settings/layout-setting/layout-setting.component.html
+++ b/src/app/routes/settings/layout-setting/layout-setting.component.html
@@ -48,7 +48,7 @@
 
 <div nz-row [nzGutter]="24">
   <nz-card nzTitle="模版预览">
-    <cn-layout-setting-resolver *ngIf="_layoutValue" [config]="_layoutValue.value"></cn-layout-setting-resolver>
+    <cn-setting-layout *ngIf="_layoutValue" [config]="_layoutValue.value"></cn-setting-layout>
   </nz-card>
 </div>
 
