--- a/src/app/routes/system/module-manager/module-operation.component.html
+++ b/src/app/routes/system/module-manager/module-operation.component.html
@@ -49,7 +49,7 @@
     <nz-form-item >
         <nz-form-label nz-col [nzSm]="6" [nzXs]="24" nzRequired mzFor="Order">排序</nz-form-label>
         <nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
-            <nz-input-number [nzSize]="'large'" formControlName="Order" ></nz-input-number>
+            <nz-input-number [nzSize]="'small'" formControlName="Order" ></nz-input-number>
         </nz-form-control>
     </nz-form-item>
     <nz-form-item>
