--- a/src/app/routes/cn-test/list/list.component.html
+++ b/src/app/routes/cn-test/list/list.component.html
@@ -24,7 +24,8 @@
         <nz-card>
             <div class="table-operations" *ngIf="config.toolbar">
                 <ng-container *ngFor="let bar of config.toolbar">
-                    <button nz-button (click)="execFun(bar.name)" class="editable-add-btn">{{bar.text}}</button>
+                   
+                    <button nz-button nzType="default" (click)="execFun(bar.name)" class="editable-add-btn">{{bar.text}}</button>
                 </ng-container>
             </div>
             <nz-table #nzTable [nzData]="list" [nzShowSizeChanger]="true"
@@ -89,3 +90,79 @@
 <div bsn-table [config]="config2" [dataList]="dataList1"></div> -->
 <cn-form-resolver [config]="configForm" ></cn-form-resolver>
 
+
+<nz-table #nestedTable [nzData]="nestedTableData" [nzPageSize]="10" nzBordered>
+    <thead>
+      <tr>
+        <th nzShowExpand></th>
+        <th>Name</th>
+        <th>Platform</th>
+        <th>Version</th>
+        <th>Upgraded</th>
+        <th>Creator</th>
+        <th>Date</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <ng-template ngFor let-data [ngForOf]="nestedTable.data">
+        <tr>
+          <td nzShowExpand [(nzExpand)]="data.expand"></td>
+          <td>{{data.name}}</td>
+          <td>{{data.platform}}</td>
+          <td>{{data.version}}</td>
+          <td>{{data.upgradeNum}}</td>
+          <td>{{data.creator}}</td>
+          <td>{{data.createdAt}}</td>
+          <td>
+            <a>Publish</a>
+          </td>
+        </tr>
+        <tr [nzExpand]="data.expand">
+          <td></td>
+          <td colspan="7">
+            <nz-table #innerTable [nzData]="data.pp" nzSize="middle" [nzShowPagination]="false" nzBordered>
+              <thead>
+                <tr>
+                  <th>Date</th>
+                  <th>Name</th>
+                  <th>Status</th>
+                  <th>Upgrade Status</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let data of innerTable.data">
+                  <td>{{data.date}}</td>
+                  <td>{{data.name}}</td>
+                  <td>
+                    <nz-badge [nzStatus]="'success'" [nzText]="'Finished'"></nz-badge>
+                  </td>
+                  <td>{{data.upgradeNum}}</td>
+                  <td>
+                    <span class="table-operation">
+                      <nz-dropdown>
+                        <a nz-dropdown class="operation">
+                          Pause <i class="anticon anticon-down"></i>
+                        </a>
+                        <ul nz-menu>
+                          <li nz-menu-item>
+                            <a>Action 1</a>
+                          </li>
+                          <li nz-menu-item>
+                            <a>Action 2</a>
+                          </li>
+                        </ul>
+                      </nz-dropdown>
+                      <a class="operation">Stop</a>
+                      <a>More</a>
+                    </span>
+                  </td>
+                </tr>
+              </tbody>
+            </nz-table>
+          </td>
+        </tr>
+      </ng-template>
+    </tbody>
+  </nz-table>
