--- a/src/app/routes/system/data-manager/type-operation.component.html
+++ b/src/app/routes/system/data-manager/type-operation.component.html
@@ -39,6 +39,7 @@
             <nz-option [nzLabel]="'正在定义'" [nzValue]="'正在定义'" ></nz-option>
             <nz-option [nzLabel]="'完成定义'" [nzValue]="'完成定义'" ></nz-option>
             <nz-option [nzLabel]="'动态生成'" [nzValue]="'动态生成'"></nz-option>
+            <nz-option [nzLabel]="'编译成功'" [nzValue]="'编译成功'"></nz-option>
             </nz-select>
         </nz-form-control>
     </nz-form-item>
