--- a/src/app/routes/system/user-manager/user-manager.component.html
+++ b/src/app/routes/system/user-manager/user-manager.component.html
@@ -2,14 +2,13 @@
 <page-header [title]=""></page-header>
 <nz-card>
   <div class = "table-operations">
-    <button nz-button>刷新 </button>
-    <button nz-button>新增</button>
-    <button nz-button>修改</button>
-    <button nz-button>删除</button>
+    <button nz-button (click)="refresh($event)">刷新 </button>
+    <button nz-button (click)="showUserForComponent('Add')">新增</button>
+    <button nz-button (click)="showUserForComponent('Edit')">修改</button>
+    <button nz-button (click)="delete($event)">删除</button>
   </div>
   <nz-table #nzTable
             [nzData]="_dataSet"
-            [nzPageSizeOptions]="[1, 2, 3, 5, 10]"
             [nzFrontPagination]="false"
             nzShowSizeChanger
             [nzLoading]="_loading"
@@ -23,23 +22,27 @@
             nzSize = "small">
     <thead (nzSortChange)="sort($event)" nzSingleSort>
     <tr>
+        <th nzShowCheckbox  [(nzChecked)]="_allChecked" [nzIndeterminate]="_indeterminate" (nzCheckedChange)="_checkAll($event)"></th>
         <th nzShowSort nzSortKey="Name">用户名</th>
         <th nzShowSort nzSortKey="Code">编码</th>
         <th nzShowSort nzSortKey="IdCardNumber">身份标识</th>
         <th nzShowSort nzSortKey="MailAddress">Email</th>
         <th nzShowSort nzSortKey="NickName">昵称</th>
+        <th nzShowSort nzSortKey="UserType">用户类型</th>
+        <th nzShowSort nzSortKey="Status">状态</th>
         <th nzShowSort nzSortKey="CreateTime">创建时间</th>
     </tr>
     </thead>
     <tbody nz-tbody>
-    <tr nz-tbody-tr *ngFor="let data of nzTable.data">
-      <td nz-td>
-        <a>{{data.Name}}</a>
-      </td>
+    <tr nz-tbody-tr *ngFor="let data of nzTable.data" (click)="selectRow(data)" [ngStyle]="{'background-color':data.selected?'rgb(236, 246, 253)':''}">
+      <td nzShowCheckbox  [(nzChecked)]="data.checked"> </td>
+      <td nz-td>{{data.Name}} </td>
       <td nz-td>{{data.Code}}</td>
       <td nz-td>{{data.IdCardNumber}}</td>
       <td nz-td>{{data.MailAddress}}</td>
       <td nz-td>{{data.NickName}}</td>
+      <td nz-td>{{data.UserType}}</td>
+      <td nz-td>{{data.Status}}</td>
       <td nz-td>{{data.CreateTime | date}}</td>
     </tr>
     </tbody>
@@ -48,70 +51,3 @@
         {{range[0]}}-{{range[1]}} / {{total}} 条
     </ng-template>
 </nz-card>
-
-
-<!--<nz-collapse>-->
-  <!--<nz-collapse-panel nzHeader='Api交互示例'>-->
-
-    <!--<div class="content__title">-->
-      <!--<div>-->
-      <!--<input type="button" value="点我获取用户信息"  (click)="getUser()">-->
-      <!--<h4>{{content}}</h4>-->
-      <!--</div>-->
-      <!--<div>-->
-      <!--<input type="button" value="点我获取模块信息"  (click)="getModule()">-->
-      <!--<h4>{{contentModule}}</h4>-->
-      <!--</div>-->
-      <!--<div>-->
-      <!--<input type="button" value="点我获取配置信息"  (click)="getAppConfigPack()">-->
-      <!--<h4>{{contentConfigPack}}</h4>-->
-      <!--</div>-->
-    <!--</div>-->
-    <!--<div class="content__title">-->
-      <!--<div>-->
-        <!--<input type="button" value="点我添加用户信息"  (click)="addUser()">-->
-        <!--<h4>{{addcontent}}</h4>-->
-      <!--</div>-->
-      <!--<div>-->
-        <!--<input type="button" value="点我添加模块信息"  (click)="addModule()">-->
-        <!--<h4>{{addcontentModule}}</h4>-->
-      <!--</div>-->
-      <!--<div>-->
-        <!--<input type="button" value="点我添加配置信息"  (click)="addAppConfigPack()">-->
-        <!--<h4>{{addcontentConfigPack}}</h4>-->
-      <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="content__title">-->
-      <!--<div>-->
-        <!--<input type="button" value="点我修改用户信息"  (click)="putUser()">-->
-        <!--<h4>{{putcontent}}</h4>-->
-      <!--</div>-->
-      <!--<div>-->
-        <!--<input type="text" #moduleId>-->
-        <!--<input type="button" value="点我修改模块信息"  (click)="putModule()">-->
-        <!--<h4>{{putcontentModule}}</h4>-->
-      <!--</div>-->
-      <!--<div>-->
-        <!--<input type="button" value="点我修改配置信息"  (click)="putAppConfigPack()">-->
-        <!--<h4>{{putcontentConfigPack}}</h4>-->
-      <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="content__title">-->
-      <!--<div>-->
-        <!--<input type="button" value="点我删除用户信息"  (click)="delUser()">-->
-        <!--<h4>{{delcontent}}</h4>-->
-      <!--</div>-->
-      <!--<div>-->
-        <!--<input type="button" value="点我删除模块信息"  (click)="delModule()">-->
-        <!--<h4>{{delcontentModule}}</h4>-->
-      <!--</div>-->
-      <!--<div>-->
-        <!--<input type="button" value="点我删除配置信息"  (click)="delAppConfigPack()">-->
-        <!--<h4>{{delcontentConfigPack}}</h4>-->
-      <!--</div>-->
-    <!--</div>-->
-
-  <!--</nz-collapse-panel>-->
-<!--</nz-collapse>-->
